--- a/app/src/main/res/layout/item_topic.xml
+++ b/app/src/main/res/layout/item_topic.xml
@@ -1,127 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/almostWhite"
+    android:minHeight="?android:attr/listPreferredItemHeight"
+    android:paddingBottom="8dp"
+    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
+    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
+    android:paddingTop="8dp">
 
-    <data>
-
-        <import type="example.powercode.us.redditclonesample.model.entity.TopicEntity" />
-
-        <variable
-            name="topic"
-            type="example.powercode.us.redditclonesample.model.entity.TopicEntity" />
-    </data>
-
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
+    <android.support.constraint.Guideline
+        android:id="@+id/guide_topic_picture"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/almostWhite"
-        android:minHeight="?android:attr/listPreferredItemHeight"
-        android:paddingBottom="8dp"
-        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
-        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
-        android:paddingTop="8dp">
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.10" />
 
-        <android.support.constraint.Guideline
-            android:id="@+id/guide_topic_picture"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.10" />
+    <android.support.constraint.Guideline
+        android:id="@+id/guide_topic_swipe_to_remove"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.90" />
 
-        <android.support.constraint.Guideline
-            android:id="@+id/guide_topic_swipe_to_remove"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.90" />
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="8dp"
+        android:contentDescription="@string/content_description_title"
+        android:src="@drawable/ic_talk_grey_24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/guide_topic_picture"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginEnd="8dp"
-            android:contentDescription="@string/content_description_title"
-            android:src="@drawable/ic_talk_grey_24dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/guide_topic_picture"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/icon_action_swipe"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:contentDescription="@string/content_description_swipe_horizontal"
+        android:src="@drawable/ic_swap_horizontal_grey_24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/guide_topic_swipe_to_remove"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/icon_action_swipe"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="8dp"
-            android:contentDescription="@string/content_description_swipe_horizontal"
-            android:src="@drawable/ic_swap_horizontal_grey_24dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/guide_topic_swipe_to_remove"
-            app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/topic_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="2"
+        android:text="@{topic.title}"
+        android:textSize="@dimen/font_size_topic_title"
+        app:layout_constraintEnd_toStartOf="@id/guide_topic_swipe_to_remove"
+        app:layout_constraintStart_toEndOf="@id/guide_topic_picture"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Some quite long text to see how it is displayed" />
 
-        <TextView
-            android:id="@+id/topic_title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:maxLines="2"
-            android:text="@{topic.title}"
-            android:textSize="@dimen/font_size_topic_title"
-            app:layout_constraintEnd_toStartOf="@id/guide_topic_swipe_to_remove"
-            app:layout_constraintStart_toEndOf="@id/guide_topic_picture"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="Some quite long text to see how it is displayed" />
+    <ImageButton
+        android:id="@+id/topic_rate_down"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?android:attr/selectableItemBackgroundBorderless"
+        android:contentDescription="@string/content_description_thumb_down"
+        android:src="@drawable/ic_thumb_down_black_24dp"
+        android:tint="@color/colorVoteDown"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/guide_topic_swipe_to_remove"
+        app:layout_constraintTop_toBottomOf="@id/topic_title" />
 
-        <ImageButton
-            android:id="@+id/topic_rate_down"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="?android:attr/selectableItemBackgroundBorderless"
-            android:contentDescription="@string/content_description_thumb_down"
-            android:src="@drawable/ic_thumb_down_black_24dp"
-            android:tint="@color/colorVoteDown"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/guide_topic_swipe_to_remove"
-            app:layout_constraintTop_toBottomOf="@id/topic_title" />
+    <ImageButton
+        android:id="@+id/topic_rate_up"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:background="?android:attr/selectableItemBackgroundBorderless"
+        android:contentDescription="@string/content_description_thumb_up"
+        android:src="@drawable/ic_thumb_up_black_24dp"
+        android:tint="@color/colorVoteUp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/topic_rate_down"
+        app:layout_constraintTop_toBottomOf="@id/topic_title" />
 
-        <ImageButton
-            android:id="@+id/topic_rate_up"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:background="?android:attr/selectableItemBackgroundBorderless"
-            android:contentDescription="@string/content_description_thumb_up"
-            android:src="@drawable/ic_thumb_up_black_24dp"
-            android:tint="@color/colorVoteUp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/topic_rate_down"
-            app:layout_constraintTop_toBottomOf="@id/topic_title" />
+    <TextView
+        android:id="@+id/topic_rating_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:text="@{String.valueOf(topic.rating)}"
+        android:textSize="@dimen/font_size_topic_rating"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/topic_rate_up"
+        app:layout_constraintStart_toEndOf="@+id/topic_rating"
+        app:layout_constraintTop_toBottomOf="@id/topic_title"
+        tools:text="31" />
 
-        <TextView
-            android:id="@+id/topic_rating_value"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:text="@{String.valueOf(topic.rating)}"
-            android:textSize="@dimen/font_size_topic_rating"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/topic_rate_up"
-            app:layout_constraintStart_toEndOf="@+id/topic_rating"
-            app:layout_constraintTop_toBottomOf="@id/topic_title"
-            tools:text="31" />
-
-        <TextView
-            android:id="@+id/topic_rating"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:text="@string/title_rating"
-            android:textSize="@dimen/font_size_topic_rating"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/topic_rating_value"
-            app:layout_constraintHorizontal_bias="1"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintStart_toEndOf="@id/guide_topic_picture"
-            app:layout_constraintTop_toBottomOf="@id/topic_title" />
-    </android.support.constraint.ConstraintLayout>
-</layout>
+    <TextView
+        android:id="@+id/topic_rating"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="4dp"
+        android:text="@string/title_rating"
+        android:textSize="@dimen/font_size_topic_rating"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/topic_rating_value"
+        app:layout_constraintHorizontal_bias="1"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toEndOf="@id/guide_topic_picture"
+        app:layout_constraintTop_toBottomOf="@id/topic_title" />
+</android.support.constraint.ConstraintLayout>
