--- a/app/src/main/res/layout/toolbar_topic_list.xml
+++ b/app/src/main/res/layout/toolbar_topic_list.xml
@@ -5,7 +5,7 @@
 
     <data>
 
-        <import type="android.databinding.ObservableInt" />
+        <import type="androidx.databinding.ObservableInt" />
 
         <import type="android.view.View" />
 
