Fixed crash with old dependency to RecyclerView's LinearLayoutManager

--- a/app/src/main/res/layout/fragment_topic_list.xml
+++ b/app/src/main/res/layout/fragment_topic_list.xml
@@ -44,7 +44,7 @@
             android:layout_height="match_parent"
             android:clipToPadding="false"
             app:emptyView="@id/rc_empty_view"
-            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             tools:listitem="@layout/item_topic" />
 
